Create setting Goal in GoalDialogFragment
GoalDialogFragment 생성 / 목표 설정 코드 생성

GoalDialogFragment : Create
    - 유저 신체정보 추가 클래스와 유사함
    - OnSettingGoalListener 인터페이스 생성
    - 목표 설정 뒤, Accept 메서드 호출 시 onSettingGoal 콜백 호출

PrimeFragment :
    - 누적 (total) 값을 CircleCounter 에서 일반 CardView 내부의 TextView 로 적용
    - CircleCounter 는 금일 값을 적용하고 Range 로 목표를 표현한다
    - setCircleCounterGoalRange 메서드 추가

CharacteristicListFragment / ServiceListFragment :
    - 어댑터 적용시 불필요한 캐스팅 삭제

CircleCounter :
    - setRange 메서드에서 int 대신 String 값을 받아 int 로 캐스팅 한뒤에 Value 적용
    - resetRange 메서드를 추가하여 유저 목표 설정시 Range 를 다시 Draw 함

df_prime_user.xml :
    - AppCompatEditText 의 불필요한 ID 값 제거

df_prime_goal.xml :
    - 유저정보 레이아웃 생성

strings.xml
    - 기본 목표 값 아이템 추가

styles_setting.xml :
    - 스타일 네이밍 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,8 @@
     <string name="dialog.skip">무시하기</string>
     <string name="dialog.fix">수정</string>
 
+    <string name="goal.def.step">20000</string>
+    <string name="goal.def.calorie">100</string>
+    <string name="goal.def.distance">10000</string>
+
 </resources>
