--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,11 @@
 <resources>
     <string name="app_name">BT.Scanner</string>
-    <string name="action.settings">Settings</string>
-    <string name="device.name.prime">Prime</string>
     <string name="gattManager">BLE</string>
 
     <string name="menu.main.scan">스캔</string>
     <string name="menu.main.sample">샘플</string>
     <string name="menu.main.help">HELP</string>
     <string name="menu.main.link">link</string>
-
-    <string name="menu.dashboard">DASHBOARD</string>
 
     <string name="menu.setting">유저정보</string>
     <string name="menu.setting.device">기기</string>
@@ -26,8 +22,7 @@
     <string name="bt.connected">connected</string>
     <string name="bt.disconnected">disconnected</string>
     <string name="bt.on">블루투스 On</string>
-    <string name="bt.not.init">블루투스가 시작되지 않았습니다.</string>
-    <string name="bt.must.start">블루투스를 시작해야 합니다.</string>
+    <string name="bt.not.init">블루투스가 시작되지 않았습니다.\n 블루투스를 시작해야 합니다.</string>
     <string name="bt.fail">기기가 블루투스를 지원하지 않거나 블루투스 장치가 제거되어있습니다.(init Fail)</string>
 
     <string name="device.list.nothing">블루루스 BLE 기기가 탐색되지 않았습니다</string>
@@ -51,7 +46,6 @@
     <string name="profile.label.type">Data Type:</string>
 
     <string name="profile.label.string">String :</string>
-    <string name="profile.label.decimal">Decimal :</string>
     <string name="profile.label.updated">Updated :</string>
     <string name="profile.timestamp">yyyy.MM.dd HH.mm.ss.SSS</string>
 
@@ -69,16 +63,22 @@
     <string name="profile.service.UUID">profile.service.UUID</string>
     <string name="profile.service.type">profile.service.type</string>
 
-    <string name="logo.pilot">A Pilot Program By</string>
-    <string name="logo.company">Rainbow - Wireless</string>
 
-    <string name="dashboard.time">Time</string>
-    <string name="dashboard.update">최근 업데이트</string>
+    <string name="prime.setting.device">Prime 기기 설정이 필요합니다</string>
+    <string name="prime.setting.device.action">설정</string>
+    <string name="prime.setting.device.tag">Device Select</string>
 
-    <string name="dashboard.step">STEP</string>
-    <string name="dashboard.calorie">CALORIE</string>
-    <string name="dashboard.distance">DISTANCE</string>
-    <string name="dashboard.etc">ETC</string>
+    <string name="prime.setting.user">신체 정보를 입력하시겠습니까?</string>
+    <string name="prime.setting.user.action">입력</string>
+    <string name="prime.setting.user.tag">User Info</string>
+
+    <string name="prime.setting.goal.tag">Goal</string>
+
+    <string name="prime.update">최근 업데이트</string>
+
+    <string name="prime.step.title">"도보량"</string>
+    <string name="prime.calorie.title">"소모열량"</string>
+    <string name="prime.distance.title">"활동거리"</string>
 
     <string name="prime.step">"걸음"</string>
     <string name="prime.calorie">"kcal"</string>
@@ -94,25 +94,14 @@
     <string name="add.user.age.hint">Age (in full)</string>
     <string name="add.user.height.hint">Height (Metric)</string>
     <string name="add.user.weight.hint">Weight (Kg)</string>
-    <string name="add.user.step.hint">Step Stride (Centimeter)</string>
-    <string name="add.user.man">Man</string>
-    <string name="add.user.woman">woman</string>
-    <string name="add.user.skip">Skip</string>
 
     <string name="user.name.default">N/A</string>
     <string name="user.age.default">20</string>
     <string name="user.height.default">170</string>
     <string name="user.weight.default">60</string>
-    <string name="user.step.default">60</string>
 
     <string name="gender.man">남성</string>
     <string name="gender.woman">여성</string>
-
-    <string name="dialog.accept">확인</string>
-    <string name="dialog.accept.ok">기입 정보가 확실한지 확인해주시기 바랍니다.</string>
-    <string name="dialog.skip.warning">개인정보를 입력하지 않더라도 사용할 수 있으나 정확한 운동량 계산과 서버연동이 불가능하오니 이점 유의해두시기 바랍니다.</string>
-    <string name="dialog.skip">무시하기</string>
-    <string name="dialog.fix">수정</string>
 
     <string name="goal.def.step">20000</string>
     <string name="goal.def.calorie">100</string>
