Update History / Card View in PrimeActivity
PrimeActivity 의 히스토리 / 카드 뷰 코드를 수정함

PrimeActivity :
    - setMaterialView 메서드에서 NestedScrollView 의 스크롤 콜백을 받아 각 프래그먼트의 포지션을 이동 (테스트)
    - YScrollDetector 제거
    - 업데이트 시간 뷰 적용은 주석처리

HistoryAdapter :
    - unit 배열 추가
    - bindViews 시 값 뒤에 unit 추가

PrimeFragment :
    - unit 배열 추가
    - setTextTotalValue 시 값 뒤에 unit 추가
    - setCardTransition 추가 카드뷰 포지션 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,13 +80,13 @@
     <string name="prime.calorie.title">"소모열량"</string>
     <string name="prime.distance.title">"활동거리"</string>
 
-    <string name="prime.step">"걸음"</string>
-    <string name="prime.calorie">"kcal"</string>
-    <string name="prime.distance">"(m)"</string>
+    <string name="prime.step">" 걸음 "</string>
+    <string name="prime.calorie">" kcal "</string>
+    <string name="prime.distance">" m "</string>
 
     <string name="prime.total.step">"총 걸음"</string>
     <string name="prime.total.calorie">"누적 kcal"</string>
-    <string name="prime.total.distance">"누적 거리(m)"</string>
+    <string name="prime.total.distance">"누적 거리"</string>
 
     <string name="prime.access.denial">"Access Denial"</string>
 
