Remove Unused CustomView in tools/view package
NestedRecyclerViewManager.java
PagerNestedScrollView.java :
    - PrimeActivity / PrimeFragment 의 뷰 수정으로 히스토리 리스트의 매니저와 커스텀 ViewPager 가 불필요해 짐
    a_prime.xml
    f_prime.xml
    f_prime_circle.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,6 @@
     <string name="goal.def.step">20000</string>
     <string name="goal.def.calorie">100</string>
     <string name="goal.def.distance">10000</string>
+    <string name="prime_chart_update_wait">대기중...</string>
 
 </resources>
