Add Disconnect Alert SnackBar in PrimeActivity
PrimeActivity :
    - disconnectDeviceSnackBar 생성
    - onBackPressed 호출시 showDisconnectDeviceSnackBar / disconnectDevice 호출
    - showDeviceSnackBar > showDeviceSettingSnackBar
    - showDisconnectDeviceSnackBar 생성
    - SharedPreferences.Editor 의 위치 변경
    - Gatt 의 onDeviceDisconnected 호출시에 SnackBar 를 체크하여 종료
    - View 의 String 적용 코드를 수정 (strings.xml)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,5 +107,11 @@
     <string name="goal.def.calorie">100</string>
     <string name="goal.def.distance">10000</string>
     <string name="prime_chart_update_wait">대기중…</string>
+    <string name="prime_ignore">강제종료</string>
+    <string name="prime_update_format">최근 업데이트 : dd일  HH : mm</string>
+    <string name="prime_battery_unit">%</string>
+    <string name="rssi_unit">db</string>
+    <string name="prime_save_date_format">MM월 dd일</string>
+    <string name="prime_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
 
 </resources>
