Update R/W Data in Prime Package classes
PrimeActivity :
    - swipeRefreshLayout 의 컬러 테스트
    - disconnectDeviceSnackBar 의 초기화 코드 이동
    - loadUserDeviceData / saveDeviceData 의 코드 수정

GoalDialogFragment :
    - setSavedGoalValue / setGoalValueView / onAccept 의 목표 저장값 R/W 코드 수정

UserDataDialogFragment :
    - setSavedUserValue / setUserValueView / onAccept 의 목표 저장값 R/W 코드 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="add.user.height.hint">Height (Metric)</string>
     <string name="add.user.weight.hint">Weight (Kg)</string>
 
-    <string name="user.name.default">N/A</string>
+    <string name="user.name.default">홍길동</string>
     <string name="user.age.default">20</string>
     <string name="user.height.default">170</string>
     <string name="user.weight.default">60</string>
