Update Prime Device Control code in helper Package
PrimeHelper :
    - parseHexStringToBytes 호출 대신, getBytes 로 간접 호출
    - getBytesForUserData 메서드 제거
    - getBytes 에서 hex 값 무결성 검사
    - parseHexStringToBytes 의 Decode 코드 이동 > decodeValue 메서드 호출
    - readTime / readValue 메서드 제거

BluetoothHelper :
    - SCAN_PERIOD 의 int 를 long 으로 수정
    - BOND_LIST / TYPE_LIST SparseArray 를 생성
    - static 생성자에서 BOND_LIST / TYPE_LIST 초기화

DeviceItem :
    - getExtraBondState / getExtraType 메서드의 값 리턴 코드 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,5 +113,6 @@
     <string name="rssi_unit">db</string>
     <string name="prime_save_date_format">MM월 dd일</string>
     <string name="prime_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
+    <string name="devicea_nam_def">N/A</string>
 
 </resources>
