Change hexData Manage Code in PrimeActivity
PrimeActivity :
    - onDeviceNotify 메서드의 hex 값 연산 메서드 호출 변경
    - setFail > fail
    - onReadSuccess / onServicesFound 콜백 메서드 수정
    - onServicesFound 에서 setAvailableGatt 호출
    - formatHexData / readUpdateTimeValue / readBatteryValue 생성
    - makePrimeItem 수정, formatHexData 호출

PrimeCircleFragment :
    - Index enum 생성, 인덱스 상수 제거
    - onAttach 수정
    - setCircleCounterGoalRange 의 PrimeDao 접근 코드 삭제
    - primeDap 변수 제거

PrimeDao : data 패키지를 상위로 이동함
    - 유저정보, 목표정보 키 상수 제거
    - enum 으로 대체함
    - loadUserData, loadGoalData, saveUserData, saveGoalData 수정
    - getUserValue / getGoalValue / getSharedPreferenceValue 생성
    - putUserValue / putGoalValue / putSharedPreferenceValue 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
 
     <string name="profile.characteristics.name">profile.characteristics.name</string>
     <string name="profile.characteristics.UUID">profile.characteristics.UUID</string>
-    <string name="profile.characteristics.value">profile.characteristics.value</string>
+    <string name="profile.characteristics.defValue">profile.characteristics.defValue</string>
 
     <string name="profile.service.name">profile.service.name</string>
     <string name="profile.service.UUID">profile.service.UUID</string>
