Fix Issue #9 [최초 실행후 back 키 종료시 강제종료 발생함]
Fix Issue #12 [디바이스 목록 다이얼로그를 dismiss 한 이후 다시 띄우는 방법이 직관적이지 않다]

#9 / #12 : PrimeActivity 수정
    - setMaterialDialog 메서드 생성, MaterialDialog 변수 추가
    - removePrimeData 메서드 추가
    - removeAllData > removeUserDeviceData
    - setAvailableGatt 수정
    - DeviceType enum 추가
    - Navigation 의 [앱 정보] 아이템 클릭시 스낵바 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="menu.main.link">link</string>
 
     <string name="menu.setting">유저정보</string>
-    <string name="menu.setting.device">기기</string>
-    <string name="menu.setting.user">신체정보</string>
-    <string name="menu.setting.goal">목표</string>
+    <string name="menu.setting.device">기기 변경하기</string>
+    <string name="menu.setting.user">신체 정보수정</string>
+    <string name="menu.setting.goal">목표 지정</string>
 
     <string name="menu.about">ABOUT</string>
     <string name="menu.about.dev">개발자 모드</string>
