--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">BT.Scanner</string>
     <string name="gattManager">BLE</string>
 
+    <string name="device_name_prime">Prime</string>
+    <string name="device_name_Vidonn">X6S</string>
+    <string name="device_name_def">N/A</string>
+
     <string name="menu.main.scan">스캔</string>
     <string name="menu.main.sample">샘플</string>
     <string name="menu.main.help">HELP</string>
@@ -17,8 +21,8 @@
     <string name="menu.about.reset">유저정보 지우기</string>
     <string name="menu.about.info">앱 정보</string>
 
-
     <string name="bt.rssi">rssi</string>
+    <string name="bt.rssi_unit">db</string>
     <string name="bt.connected">connected</string>
     <string name="bt.disconnected">disconnected</string>
     <string name="bt.on">블루투스 On</string>
@@ -106,14 +110,28 @@
     <string name="goal.def.step">20000</string>
     <string name="goal.def.calorie">100</string>
     <string name="goal.def.distance">10000</string>
+
     <string name="prime_chart_update_wait">대기중…</string>
     <string name="prime_ignore">강제종료</string>
     <string name="prime_update_format">최근 업데이트 시간 [ HH : mm ]</string>
     <string name="prime_battery_unit">%</string>
-    <string name="rssi_unit">db</string>
+
     <string name="prime_save_date_format">MM월 dd일</string>
     <string name="prime_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
-    <string name="device_name_def">N/A</string>
+
     <string name="prime_data_queue">데이터 로딩중..</string>
+
+
+    <string name="prime_remove_title">어떤 데이터를 삭제하시겠습니까?</string>
+    <string name="prime_remove_item_user_device">유저정보(기기, 신체 정보)</string>
+    <string name="prime_remove_item_exercise">운동정보(도보량, 소모열량, 활동거리 저장 DB)</string>
+    <string name="prime_remove_item_all">전체 삭제</string>
+    <string name="prime_remove_accept">삭제</string>
+    <string name="prime_remove_denied">취소</string>
+    <string name="prime_reconnect_title">이전 데이터와 연동하시겠습니까?</string>
+    <string name="prime_reconnect_content">이전 기기에서 사용한 운동량 데이터가 남아있습니다. 이전 데이터를 삭제하거나 이어서 저장 할 수 있습니다.</string>
+    <string name="prime_reconnect_accept">이어하기</string>
+    <string name="prime_reconnect_denied">처음부터</string>
+
 
 </resources>
