--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="prime_update_format">최근 업데이트 시간 [ HH : mm ]</string>
     <string name="prime_battery_unit">%</string>
 
+    <string name="prime_save_date_format_full">yy년 MM월 dd일</string>
     <string name="prime_save_date_format">MM월 dd일</string>
     <string name="prime_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
 
