--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BT.Scanner</string>
     <string name="gattManager">BLE</string>
 
-    <string name="device_name_prime">Prime</string>
+    <string name="device_name_prime">nursing</string>
     <string name="device_name_Vidonn">X6S</string>
     <string name="device_name_def">N/A</string>
 
@@ -68,31 +68,32 @@
     <string name="profile.service.type">profile.service.type</string>
 
 
-    <string name="prime.setting.device">Prime 기기 설정이 필요합니다</string>
-    <string name="prime.setting.device.action">설정</string>
-    <string name="prime.setting.device.tag">Device Select</string>
+    <string name="nursing.setting.device">기기 설정이 필요합니다</string>
+    <string name="nursing.setting.device.action">설정</string>
+    <string name="nursing.setting.device.tag">Device Select</string>
 
-    <string name="prime.setting.user">신체 정보를 입력하시겠습니까?</string>
-    <string name="prime.setting.user.action">입력</string>
-    <string name="prime.setting.user.tag">User Info</string>
+    <string name="nursing.setting.user">신체 정보를 입력하시겠습니까?</string>
+    <string name="nursing.setting.user.action">입력</string>
+    <string name="nursing.setting.user.tag">User Info</string>
+    <string name="nursing.setting.user.error">다시 입력하세요</string>
 
-    <string name="prime.setting.goal.tag">Goal</string>
+    <string name="nursing.setting.goal.tag">Goal</string>
 
-    <string name="prime.update">최근 업데이트</string>
+    <string name="nursing.update">최근 업데이트</string>
 
-    <string name="prime.step.title">"도보량"</string>
-    <string name="prime.calorie.title">"소모열량"</string>
-    <string name="prime.distance.title">"활동거리"</string>
+    <string name="nursing.step.title">"도보량"</string>
+    <string name="nursing.calorie.title">"소모열량"</string>
+    <string name="nursing.distance.title">"활동거리"</string>
 
-    <string name="prime.step">" 걸음 "</string>
-    <string name="prime.calorie">" kcal "</string>
-    <string name="prime.distance">" m "</string>
+    <string name="nursing.step">" 걸음 "</string>
+    <string name="nursing.calorie">" kcal "</string>
+    <string name="nursing.distance">" m "</string>
 
-    <string name="prime.total.step">"총 걸음"</string>
-    <string name="prime.total.calorie">"누적 kcal"</string>
-    <string name="prime.total.distance">"누적 거리"</string>
+    <string name="nursing.total.step">"총 걸음"</string>
+    <string name="nursing.total.calorie">"누적 kcal"</string>
+    <string name="nursing.total.distance">"누적 거리"</string>
 
-    <string name="prime.access.denial">"Access Denial"</string>
+    <string name="nursing.access.denial">"Access Denial"</string>
 
     <string name="add.user.name.hint">Name</string>
     <string name="add.user.age.hint">Age (in full)</string>
@@ -111,28 +112,28 @@
     <string name="goal.def.calorie">100</string>
     <string name="goal.def.distance">10000</string>
 
-    <string name="prime_chart_update_wait">대기중…</string>
-    <string name="prime_ignore">강제종료</string>
-    <string name="prime_update_format">최근 업데이트 시간 [ HH : mm ]</string>
-    <string name="prime_battery_unit">%</string>
+    <string name="nursing_chart_update_wait">대기중…</string>
+    <string name="nursing_ignore">강제종료</string>
+    <string name="nursing_update_format">최근 업데이트 시간 [ HH : mm ]</string>
+    <string name="nursing_battery_unit">%</string>
 
-    <string name="prime_save_date_format_full">yy년 MM월 dd일</string>
-    <string name="prime_save_date_format">MM월 dd일</string>
-    <string name="prime_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
+    <string name="nursing_save_date_format_full">yy년 MM월 dd일</string>
+    <string name="nursing_save_date_format">MM월 dd일</string>
+    <string name="nursing_disconnect_snack">기기와의 연결이 끊어질 때 까지 기다려 주십시오</string>
 
-    <string name="prime_data_queue">데이터 로딩중..</string>
+    <string name="nursing_data_queue">데이터 로딩중..</string>
 
 
-    <string name="prime_remove_title">어떤 데이터를 삭제하시겠습니까?</string>
-    <string name="prime_remove_item_user_device">유저정보(기기, 신체 정보)</string>
-    <string name="prime_remove_item_exercise">운동정보(도보량, 소모열량, 활동거리 저장 DB)</string>
-    <string name="prime_remove_item_all">전체 삭제</string>
-    <string name="prime_remove_accept">삭제</string>
-    <string name="prime_remove_denied">취소</string>
-    <string name="prime_reconnect_title">이전 데이터와 연동하시겠습니까?</string>
-    <string name="prime_reconnect_content">이전 기기에서 사용한 운동량 데이터가 남아있습니다. 이전 데이터를 삭제하거나 이어서 저장 할 수 있습니다.</string>
-    <string name="prime_reconnect_accept">이어하기</string>
-    <string name="prime_reconnect_denied">처음부터</string>
+    <string name="nursing_remove_title">어떤 데이터를 삭제하시겠습니까?</string>
+    <string name="nursing_remove_item_user_device">유저정보(기기, 신체 정보)</string>
+    <string name="nursing_remove_item_exercise">운동정보(도보량, 소모열량, 활동거리 저장 DB)</string>
+    <string name="nursing_remove_item_all">전체 삭제</string>
+    <string name="nursing_remove_accept">삭제</string>
+    <string name="nursing_remove_denied">취소</string>
+    <string name="nursing_reconnect_title">이전 데이터와 연동하시겠습니까?</string>
+    <string name="nursing_reconnect_content">이전 기기에서 사용한 운동량 데이터가 남아있습니다. 이전 데이터를 삭제하거나 이어서 저장 할 수 있습니다.</string>
+    <string name="nursing_reconnect_accept">이어하기</string>
+    <string name="nursing_reconnect_denied">처음부터</string>
 
 
 </resources>
