Fast Commit / THIS IS NOT OFFICIAL

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="bt.rssi">rssi</string>
     <string name="bt.rssi_unit">db</string>
+    <string name="bt.connecting">connecting</string>
     <string name="bt.connected">connected</string>
     <string name="bt.disconnected">disconnected</string>
     <string name="bt.on">블루투스 On</string>
